welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: recursive variable n needs type
	n=litMessage(): String
        ^